Add comments for clarity

--- a/Analyze_Data.ipynb
+++ b/Analyze_Data.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Posture Monitor Data Analysis\n",
+    "\n",
+    "Extract data from `.dat` files and then display using matplotlib"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -10,8 +19,16 @@
    "source": [
     "from analyze import *\n",
     "import numpy as np\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input meta data manually"
    ]
   },
   {
@@ -38,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load data using functions in analyze.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -60,6 +84,13 @@
     "baseline = get_baseline(s20)\n",
     "times, widths = get_distances(s20)\n",
     "time_delta = [(x-times[0]).total_seconds() for x in times]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display subject data before and after outlier removal"
    ]
   },
   {
@@ -845,10 +876,7 @@
     }
    ],
    "source": [
-    "import matplotlib\n",
-    "\n",
     "formatter = matplotlib.ticker.FuncFormatter(timeTicks)\n",
-    "    \n",
     "fig, (ax1, ax2) = plt.subplots(nrows=2,ncols=1)\n",
     "\n",
     "# Plot raw data\n",
@@ -870,6 +898,13 @@
     "    \n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot majority of subjects"
    ]
   },
   {
