Add comments and remove unused code

--- a/Analyze_Data.ipynb
+++ b/Analyze_Data.ipynb
@@ -1713,26 +1713,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multi indexing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "14\n",
-      "15\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1750,9 +1744,8 @@
     "df_list = []\n",
     "keys = []\n",
     "\n",
-    "# Convert data into one table\n",
+    "# Move data to pandas dataframe\n",
     "for subject_id in subject_meta.keys():\n",
-    "    print(subject_id)\n",
     "    subject_data = get_subject(data,subject_id)\n",
     "    baseline = get_baseline(subject_data)\n",
     "    times, widths = get_distances(subject_data)\n",
@@ -1767,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -2105,7 +2098,7 @@
        "[2840 rows x 1 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,6 +2106,13 @@
    "source": [
     "df = pd.concat(df_list, keys = keys)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single indexing with interpolation"
    ]
   },
   {
@@ -2157,33 +2157,10 @@
    "outputs": [],
    "source": [
     "# Fill missing values by interpolation with average of neighbors\n",
-    "df_clean = df.interpolate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# FIXME: Calling `plot` crashes the kernel for unknown reason\n",
-    "# fig = plt.figure()\n",
-    "# df_clean[16].iloc[:10].plot()\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "df_clean = df.interpolate()\n",
     "df_clean = df_clean.ffill().fillna(method='backfill').applymap(int)\n",
+    "\n",
+    "# Save to csv file for anova analysis in R\n",
     "df_clean.to_csv('posture_data.csv')"
    ]
   }
